[tool.poetry]
name = "rico2coco"
version = "0.1.0"
description = ""
authors = ["xrhd <rhd@icomp.ufam.edu.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.3.1"
pandas = "^1.3.1"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
